# gaiaspec

./: README.md  setup.cfg  setup.py
data/: gaia_source_file.csv  gaia_source_file.parquet  gaia_spectra_file.parquet  gaia_spectrum_file.csv
gaiaspec/: __init__.py  getGaia.py  spectrum_correction.py  standard.py  utils.py
gaiaspec/data/: calspec_gaia_matching.csv  gaia_flux_correction.parquet  gaia_source_file.parquet  gaia_source_file_ddf_v0.parquet  gaia_spectra_file_ddf_v0.parquet
scripts/: gaiaspec_create_ddf_catalogs.py
