[metadata]
name = gaiaspec
description = Package to get Gaia spectra to use them as standards for atmospheric measurements with AuxTel
url = https://github.com/corentinravoux/gaiaspec
email = corentin.ravoux.research@gmail.com
author = Corentin Ravoux
long_description = file : README.md


[options]
packages = find:
install_requires =
    pandas
    numpy
    scipy
    matplotlib
    astropy
    gaiaxpy
    pyarrow
    fastparquet
    pytables



[options.package_data]
gaiaspec = ./data/*